dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xchalle-playground-deployement
  labels:
    app: xchalle-playground
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xchalle-playground
  template:
    metadata:
      labels:
        app: xchalle-playground
    spec:
      containers:
      - name : xchalle-playground
        image: wil42/playground:v1
        ports:
        - containerPort: 8888
