dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xchalle-bonus-playground-service
spec:
  selector:
    app: xchalle-bonus-playground
  ports:
  - name: http
    protocol: TCP
    port: 8889
    targetPort: 8889
